--- a/.github/workflows/xtask.yml
+++ b/.github/workflows/xtask.yml
@@ -1,22 +1,7 @@
 name: XTasks
 
 on:
-  pull_request:
-    paths:
-      - "xtask"
-      - "Cargo.toml"
-      - "Cargo.lock"
-      - ".cargo"
-      - "core/tabs"
-      - "docs"
-  push:
-    paths:
-      - "xtask"
-      - "Cargo.toml"
-      - "Cargo.lock"
-      - ".cargo"
-      - "core/tabs"
-      - "docs"
+  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
@@ -63,5 +48,5 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add /content/userguide.md
+          git add /src/userguide.md
           git commit -m "Commit the user guide" || echo "No changes to commit"
