Revert "Refactor Linutil Docs with mdBook (#8)" (#9)
This reverts commit e5a8b09bbde46144ada265ea8fcbcf0e9e533870.

--- a/.github/workflows/xtask.yml
+++ b/.github/workflows/xtask.yml
@@ -1,7 +1,22 @@
 name: XTasks
 
 on:
-  workflow_dispatch:
+  pull_request:
+    paths:
+      - "xtask"
+      - "Cargo.toml"
+      - "Cargo.lock"
+      - ".cargo"
+      - "core/tabs"
+      - "docs"
+  push:
+    paths:
+      - "xtask"
+      - "Cargo.toml"
+      - "Cargo.lock"
+      - ".cargo"
+      - "core/tabs"
+      - "docs"
 
 env:
   CARGO_TERM_COLOR: always
@@ -48,5 +63,5 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add /src/userguide.md
+          git add /content/userguide.md
           git commit -m "Commit the user guide" || echo "No changes to commit"
